# dotenv

./: .travis.yml  Cargo.toml  LICENSE  README.md  cmd_all.go  cmd_linux.go  flags.go  go.mod  main.go  utils.go
.github/workflows/: build-main.yaml  release.yaml  test.yaml
src/: env_parser.rs  main.rs
