[package]
name = "dotenv"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.35", features = ["derive"] }
dirs = "6.0.0"
libc = "0.2.169"

[dev-dependencies]
serial_test = "3.2.0"
tempfile = "3.19.1"

[profile.release]
opt-level = "z"   # Optimize for size.
lto = true        # Enable link time optimization.
codegen-units = 1 # Reduce parallel code generation units.
strip = "symbols" # Strip debug symbols.
